# RAGFuzz

./: .gitignore  README.md  pyproject.toml  quickstart.md
.github/workflows/: ci.yml
.test_cache/: ragfuzz_cache.db
ragfuzz/: __init__.py  cli.py  config.py  constants.py  models.py  pricing.py
ragfuzz/engine/: __init__.py  cache.py  corpus.py  scheduler.py
ragfuzz/mutators/: __init__.py  base.py  grammar.py  graph.py  llm_guided.py  poison.py  stateful.py  template.py
ragfuzz/providers/: __init__.py  base.py  doctor.py  openai_compat.py
ragfuzz/reports/: __init__.py  html.py  viz.py
ragfuzz/scoring/: __init__.py  base.py  heuristics.py  judge.py
ragfuzz/storage/: __init__.py  baseline.py  run_dir.py
ragfuzz/targets/: __init__.py  base.py  chat.py  http.py  jr_autorag.py
ragfuzz/utils/: __init__.py  async_client.py  bisect.py  vram.py
suites/: rag-canary-leak.yaml
tests/: conftest.py  test_engine.py  test_mutators.py  test_providers.py  test_scheduler.py  test_scoring.py  test_storage.py
